# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-shapes"
description = "PurRDF SHACL validation engine core: native RDF 1.2 SHACL Core validator, gated against the SHACL conformance corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-shapes"
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "shacl", "validation", "knowledge-graph", "rdf-12"]
categories = ["parser-implementations"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only: Python bindings live in `bindings/python`, so this crate stays
# PyO3-free and wasm-clean.
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
# Native SPARQL parser. Used at shape-load to reject non-SELECT
# SHACL-SPARQL queries (ASK/CONSTRUCT/DESCRIBE) — they parse but cannot bind ?this
# and would panic at eval. Use SparqlParser to parse and match Query::Select.
# Replaces the oxigraph-family SPARQL parser.
purrdf-sparql-algebra = { workspace = true }
# Native SPARQL engine (crates/sparql-eval): the single SparqlEngine impl over the
# frozen IR. Replaces oxigraph's SPARQL 1.1 engine for SHACL-AF sh:sparql /
# sh:SPARQLTarget evaluation.
purrdf-sparql-eval = { workspace = true }
# sh:pattern regex constraint.
regex = { workspace = true }
# XSD value-space machinery: temporal (xsd:dateTime/date/time) value comparison
# for the sh:minInclusive / sh:maxInclusive / sh:minExclusive / sh:maxExclusive
# facets (W3C core/node/minInclusive-002/-003 — timezone-aware partial order;
# indeterminate comparisons are violations).
purrdf-xsd = { workspace = true }
# JSON Schema / OpenAPI emitter. NO `preserve_order` feature: we rely on
# serde_json's default BTreeMap-backed Map so object keys serialize sorted for
# deterministic, byte-stable output.
serde_json = { workspace = true }
# Canonical LinkML 1.11 YAML codec. Both dependencies are always-on: the
# reader/writer is one production behavior on native and wasm targets.
serde = { workspace = true }
serde_yaml = { workspace = true }
# Validate caller-supplied schema and prefix IRIs with the workspace's
# zero-dependency RFC 3987 implementation.
purrdf-iri = { workspace = true }
# Shared PyO3-free RDF 1.2 kernel and native GTS/text-codec boundary.
# NOT workspace-inherited: renamed deps (`package = ...`) cannot be expressed
# at an inheriting use site, and the workspace key `purrdf` is the umbrella.
purrdf = { package = "purrdf-rdf", path = "../rdf", version = "0.7.0" }
# Inline small-vector primitive for hot, short-lived id rows (default features
# only — no `union`/`serde`; wasm-clean, `unsafe`-free). Version is pinned once
# in the root `[workspace.dependencies]`.
smallvec = { workspace = true }

[dev-dependencies]
purrdf-gts = { workspace = true }
purrdf-slice = { workspace = true }
proptest = { workspace = true }
# Acceleration-program baselines; light feature set, see crates/logic.
criterion = { workspace = true }
# Trusted external JSON Schema (draft 2020-12) validator: the negation tests
# observe the emitted schema_json's real accept/reject behaviour against JSON-LD
# instance nodes, rather than asserting the schema's JSON shape. Dev-only; never
# enters the release/wasm build.
boon = { workspace = true }

[[bench]]
name = "validate"
harness = false

[[bench]]
name = "pattern_lookup"
harness = false

[[bench]]
name = "canonical_sort"
harness = false
