# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-slice"
description = "PURRDF native slice catalog: manifest-based discovery, typed artifact inventory, content-addressed IDs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
# Oxigraph-free (EPIC #906): the slice catalog/emitters/linters parse via the native
# `gts` text codecs (`parse_dataset`) into the `RdfDataset` IR and query it directly.
purrdf = { path = "../rdf", version = "0.1.0" }
# Native SPARQL parser (purrdf S5, #911) — competency/verify queries are PARSED
# (RFC §10), never text-searched, to extract referenced term IRIs. Replaces the
# oxigraph-family SPARQL parser; RDF-1.2 quoted triple terms are first-class.
purrdf-sparql-algebra = { path = "../sparql-algebra", version = "0.1.0" }
# Strongly-connected-component computation over the S4 dependency graph
# (RFC §8 link units). `petgraph` is a published registry crate (no `path`),
# so it is an external boundary, not a first-party layering edge — the
# crate-layering gate (S0.9) is unaffected. Version aligns with the workspace
# lockfile resolution.
petgraph = { version = "0.8", default-features = false }
sha2 = "0.10"
hex = "0.4"
# The prefix-consistency lint scans authored `.ttl` / `.rq` sources for `@prefix` /
# `PREFIX` declarations with a regex, to police registry-prefix shadowing. External
# published crate (already in the workspace lockfile, used by purrdf-validate/purrdf-shapes),
# so the S0.9 layering gate is unaffected.
regex = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1.48", features = ["json"] }
