# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-slice"
description = "PurRDF native slice catalog: manifest-based discovery, typed artifact inventory, content-addressed IDs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-slice"
rust-version.workspace = true
readme = "README.md"
keywords = ["rdf", "linked-data", "manifest", "slice", "provenance"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
# Oxigraph-free: the slice catalog/emitters/linters parse via the native
# `gts` text codecs (`parse_dataset`) into the `RdfDataset` IR and query it directly.
# NOT workspace-inherited: renamed deps (`package = ...`) cannot be expressed
# at an inheriting use site, and the workspace key `purrdf` is the umbrella.
purrdf = { package = "purrdf-rdf", path = "../rdf", version = "0.4.3" }
# Native SPARQL parser — competency/verify queries are PARSED
# (RFC §10), never text-searched, to extract referenced term IRIs. Replaces the
# oxigraph-family SPARQL parser; RDF-1.2 quoted triple terms are first-class.
purrdf-sparql-algebra = { workspace = true }
# Strongly-connected-component computation over the S4 dependency graph
# (RFC §8 link units). `petgraph` is a published registry crate (no `path`),
# so it is an external boundary, not a first-party layering edge — the
# crate-layering gate (S0.9) is unaffected. Version aligns with the workspace
# lockfile resolution.
petgraph = { workspace = true }
# Default features (std) re-enabled; the workspace-level entry is
# default-features = false for the wasm-clean eval path.
sha2 = { workspace = true, default-features = true }
hex = { workspace = true }
# The prefix-consistency lint scans authored `.ttl` / `.rq` sources for `@prefix` /
# `PREFIX` declarations with a regex, to police registry-prefix shadowing. External
# published crate (already in the workspace lockfile, used by purrdf-validate/purrdf-shapes),
# so the S0.9 layering gate is unaffected.
regex = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true, features = ["json"] }
