# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-sparql-conformance"
description = "Native W3C SPARQL 1.1 conformance harness: discovers mf: test manifests, runs the native purrdf-sparql-eval engine, and diffs against expected SPARQL Results (SRX/SRJ) / canonical N-Quads. Federated SERVICE tests resolve through an in-memory RemoteQuerySource (no network). Zero oxigraph Store."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# The engine under test + its algebra front-end.
purrdf-sparql-eval = { workspace = true }
purrdf-sparql-algebra = { workspace = true }
# Native Turtle/TriG/N-Quads loader (parse_dataset) + RDFC-1.0 canonicalization,
# both oxigraph-Store-free.
purrdf = { workspace = true }
purrdf-core = { workspace = true }
# Hand-rolled SPARQL Results readers for the expected SRX/SRJ files.
purrdf-sparql-results = { workspace = true }
# Native RDFS/OWL-RL entailment closure for `sd:entailmentRegime` tests.
purrdf-entail = { workspace = true }
# UTF-8 path type used by the datatest-stable harness signature.
camino = { workspace = true }

[dev-dependencies]
datatest-stable = { workspace = true }

[[test]]
name = "sparql_conformance"
harness = false

# PURRDF-owned native regression corpus. This deliberately avoids the historical
# ontology query corpus and does not load generated/dist/purrdf.gts; the broad
# W3C / extension coverage stays in the manifest-driven `sparql_conformance` test.
[[test]]
name = "corpus_conformance"
harness = true
