# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-sparql-eval"
description = "Native, RDF-1.2-first multiset SPARQL evaluator over the DatasetView read trait in interned TermId space — the runtime that consumes purrdf-sparql-algebra (S5) and replaces the oxigraph-family spareval on the query path"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["sparql", "rdf", "rdf-12", "evaluator", "query"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only, wasm-clean: the SPARQL evaluation runtime of the native query stack.
# It must NOT pull any oxigraph-family crate (it replaces the oxigraph-family
# `spareval`). It consumes the wasm-clean `purrdf-sparql-algebra` front-end,
# evaluates over the `purrdf-core` IR `DatasetView` in interned `TermId`
# space and uses
# `purrdf-xsd` for FILTER/BIND/ORDER value-space semantics.
crate-type = ["rlib"]
path = "src/lib.rs"
name = "purrdf_sparql_eval"

[dependencies]
# The IR + DatasetView read trait + SparqlEngine seam, in TermId space.
purrdf-core = { workspace = true }
# The query algebra this crate evaluates (parser + GraphPattern/Expression AST).
purrdf-sparql-algebra = { workspace = true }
# The XSD value space for FILTER/BIND/ORDER: value-space equality/ordering
# (value_cmp/value_eq), effective boolean value, and the numeric tower.
purrdf-xsd = { workspace = true }
# Pure-Rust, wasm-clean regex engine for the SPARQL REGEX/REPLACE built-ins. Already
# in the workspace lock; pulls only regex-automata/regex-syntax/aho-corasick/memchr
# (no oxigraph-family edge — gated by `make rdf-core-hygiene`).
regex = { workspace = true }
# Fixed-key, non-cryptographic hashing for deterministic in-memory evaluator maps.
# Keeps the wasm-clean dependency path by disabling ahash's runtime RNG feature
# (default-features = false in the workspace table).
ahash = { workspace = true }
# RustCrypto hash crates — all wasm-safe (no getrandom; pure software).
# default-features = false in the workspace table keeps this tree wasm-clean.
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
# SPARQL Results reader for decoding remote SERVICE responses. Wasm-clean
# (hand-rolled, no serde). No oxigraph-family edge.
purrdf-sparql-results = { workspace = true }
# RFC-3986 IRI parsing/resolution, for the IRI()/URI() built-in's relative-reference
# resolution against the query's base IRI (SPARQL 1.1 §17.4.2.6). Already a
# wasm-clean foundation leaf the algebra parser depends on for the same purpose.
purrdf-iri = { workspace = true }
# Deterministic two-phase parallel evaluation primitives (`parallel` module):
# fork-join per BGP/group row batch, reduced back in source order. Unconditional —
# rayon compiles cleanly on wasm32-unknown-unknown and degrades to inline-sequential
# execution there (same pattern as purrdf-rdf's chunk-parallel text parse).
rayon = { workspace = true }
# Inline small-vector primitive for hot, short-lived id rows / solution columns
# (default features only — no `union`/`serde`; wasm-clean, `unsafe`-free). Version
# is pinned once in the root `[workspace.dependencies]`.
smallvec = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# OS entropy for the RAND()/UUID()/STRUUID() seed on native targets. Target-gated
# so the wasm build (make wasm) never pulls it.
getrandom = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Browser wall clock + entropy for NOW()/RAND() on wasm. Target-gated so native
# builds never pull js-sys.
js-sys = { workspace = true }

[dev-dependencies]
# Colored line-diffs on assert_eq! failure (repo convention).
pretty_assertions = { workspace = true }
# Criterion for the EXISTS-decorrelation perf bench. Defaults off
# (no plotters/rayon) like the sibling crates, so `make bench` stays lean and no
# oxigraph-family edge enters the dev tree (gated by `make rdf-core-hygiene`).
criterion = { workspace = true }

[[bench]]
# `EXISTS` decorrelation: naive per-row inner re-eval vs cached inner, measured
# head-to-head over a synthetic 1k-row anti-join. Report-only; `make bench` lane
# only — excluded from `make check`.
name = "exists_decorrelation"
harness = false

[[bench]]
# End-to-end query-mix evaluation over a ~300k-quad synthetic star dataset through
# NativeSparqlEngine: selective/unselective BGP joins, FILTER regex+numeric,
# OPTIONAL, UNION, GROUP BY aggregates, transitive property path, ORDER BY+LIMIT.
# Report-only; `make bench` lane only — excluded from `make check`.
name = "query_eval"
harness = false

[[bench]]
# Cost-based BGP join-planner latency on a skewed multi-join star, at two scales.
# A regression watch on planning + eval cost (the structural heuristic was removed,
# so there is no wall-time A/B; the deterministic win is a `bgp` unit test).
# Report-only; `make bench` lane only — excluded from `make check`.
name = "cost_based_bgp_planner"
harness = false

[[bench]]
# LATERAL variable-endpoint SERVICE: per-left-row substitute+forward cost of
# `SERVICE ?g` (the LATERAL path) vs the constant-forward fixed-IRI SERVICE (Join),
# over an offline LocalRemoteQuerySource at two scales. Report-only; `make bench`
# lane only — excluded from `make check`.
name = "lateral_service"
harness = false

[[bench]]
# `Solution` row machinery in isolation: constructing, cloning/extending, binding,
# compatibility-probing, and join-merging synthetic rows in both the inline (≤4
# col) and spilled (>4 col) SmallVec regimes. Report-only; `make bench` lane only
# — excluded from `make check`.
name = "solution_row"
harness = false
