# SPDX-FileCopyrightText: 2026 Blackcat Informatics Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-sparql-results"
description = "Native, wasm-clean serializer for the SPARQL result model (SELECT/ASK/CONSTRUCT) to SPARQL Results JSON/XML/CSV/TSV plus a provenance-carrying purrdf extension — the canonical results-serialization authority replacing the oxigraph-family `sparesults`"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["sparql", "rdf", "rdf-12", "results", "serialization"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only, wasm-clean leaf: serializes the `purrdf-core` SparqlResult egress
# model to the four W3C SPARQL Results formats + a provenance extension. It must
# NOT pull any oxigraph-family crate (it replaces the oxigraph-family `sparesults`)
# and depends on `purrdf-core`.
crate-type = ["rlib"]
path = "src/lib.rs"
name = "purrdf_sparql_results"

[dependencies]
purrdf-core = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
