# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "purrdf-sparql-results"
description = "Native, wasm-clean serializer for the SPARQL result model (SELECT/ASK/CONSTRUCT) to SPARQL Results JSON/XML/CSV/TSV plus a provenance-carrying purrdf extension — the canonical results-serialization authority replacing the oxigraph-family `sparesults`"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/purrdf-sparql-results"
rust-version.workspace = true
readme = "README.md"
keywords = ["sparql", "rdf", "rdf-12", "results", "serialization"]
categories = ["encoding"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[lib]
# rlib-only, wasm-clean leaf: serializes the `purrdf-core` SparqlResult egress
# model to the four W3C SPARQL Results formats + a provenance extension. It must
# NOT pull any oxigraph-family crate (it replaces the oxigraph-family `sparesults`)
# and depends on `purrdf-core`.
crate-type = ["rlib"]
path = "src/lib.rs"
name = "purrdf_sparql_results"

[dependencies]
purrdf-core = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
# Borrowed-writer streaming N-Triples serialization hot-path baseline. Defaults
# off (no plotters/rayon) like the sibling crates, so `make bench` stays lean and
# no oxigraph-family edge enters the dev tree.
criterion = { workspace = true }

[[bench]]
# CONSTRUCT-graph -> N-Triples streaming serialization (`to_json`'s `Graph`
# branch, which drives `graph::dataset_to_ntriples`'s borrowed `write_dataset_*`
# writers). Report-only; `make bench` lane only — excluded from `make check`.
name = "graph_serialize"
harness = false
