# SPDX-FileCopyrightText: 2026 Blackcat Informatics® Inc. <paudley@blackcatinformatics.ca>
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "purrdf-gts-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Keep the fuzz crate out of the parent crate's build and isolated as its own
# single-package workspace.
[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.purrdf-gts]
path = ".."

[[bin]]
name = "read"
path = "fuzz_targets/read.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
